--- a/src/components/Archive/Archive.css
+++ b/src/components/Archive/Archive.css
@@ -5,3 +5,13 @@
   overflow: hidden;
   height: 89vh;
 }
+
+.Archive_showData {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  width: 100%;
+  padding-left: 8px;
+  margin-top: 17px;
+  z-index: 2;
+}
