--- a/src/components/Card/Menu.css
+++ b/src/components/Card/Menu.css
@@ -1,10 +1,10 @@
 .card-menu {
   width: 154px;
   height: 190px;
-  background-color: whitesmoke;
+  background-color: white;
   color: black;
   padding: 1px 2px;
-  border: 5px solid whitesmoke;
+  border: 5px solid white;
   box-shadow: 1px 1px 15px gray;
   border-radius: 8px;
   z-index: 100;
